Fix sizing bug in top-container
The top-container did not size up or down correctly.
The left side text and button would go off screen
when the size of screen changes.

--- a/style.css
+++ b/style.css
@@ -13,24 +13,31 @@ body
     display: flex;
     background-color: black;
     height: 400px;
-    padding-bottom:0;
-    margin: 0;
-    justify-content: center;
-    justify-content: space-between;
-    padding-left: 300px;
-    padding-right: 300px;
+    flex: 1;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
+    justify-content: center;
+    gap: 25px;
+
+}
+
+.top-left-side
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 40%;
 }
 
 .topper
 {
     background-color: black;
     display: flex;
-    justify-content: space-between;
-    padding-left: 350px;
-    padding-right: 350px;
+    flex: 1;
     align-items: center;
+    justify-content: center;
+    gap: 65%;
+    padding-right: 10px;
 }
 
 .text-and-button
@@ -38,30 +45,21 @@ body
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: center;
-    margin-bottom: 50px;
-    justify-content: space-evenly;
-    padding-left: 50px;
+    background-color: red;
 }
 
 .top-header
 {
     font-size: 60px;
-    padding-right: 40px;
     font-weight: 500;
 }
 
-.top-body
-{
-    padding-right: 100px;
-    padding-left: 6px;
-}
 
 .size-big-img
 {
-    height: 350px;
+    height: 300px;
     width: 650px;
-    padding-right: 50px;
+    padding-right: 0;
 }
 
 a
@@ -92,6 +90,7 @@ ul
     font-size: 20px;
     background-color:#f8f8f8;
     color: black;
+    margin-top: 20px;
 }
 button:hover
 {
@@ -114,21 +113,89 @@ button:hover
     box-shadow: 5px 3px 8px 15px #360907;
 }
 
-.quote-container
-{
-    display: flex;
-    background-color: red;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-    
-}
 
 li:hover
 {
     transform: scale(1.1);
     box-shadow: 8px 10px 15px #861713;
 }
+
+
+/* images and text section (second part of the webpage) */
+
+.img-container
+{
+    display: flex;
+    justify-content: center;
+    color: brown;
+    margin-bottom: 100px;
+    gap: 60px;
+    text-align: center;
+    overflow-wrap: break-word;
+}
+
+.img-text
+{
+    width: 230px;
+    color: #000000ba;
+    margin-top: 25px;
+}
+
+
+.img-class
+{
+    height: 320px;
+    width: 230px;
+    box-shadow: 10px 13px 25px black;
+}
+
+.img-header
+{
+    display: flex;
+    justify-content: center;
+    color: black;
+    margin-top: 50px;
+    font-size: 40px;
+    margin-bottom: 50px;
+}
+
+/* second section done, third starts here*/
+
+.quote-container
+{
+    display: flex;
+    background-color: red;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    height: 350px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.quote
+{
+    width: 1100px;
+    font-size: 50px;
+    font-weight: 100;
+}
+
+.quote-by
+{
+    margin-top: 35px;
+}
+
+.quote-center
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-style: italic;
+    
+}
+
+
+/* third section is finished, fourth starts here*/
 
 .sign-up-box
 {
@@ -137,31 +204,10 @@ li:hover
     justify-content: center;
     margin: 0;
     padding: 0;
-
 }
 
+/* fourth section is finished, fifth starts here*/
 .footer
 {
     background-color: aquamarine;
 }
-
-.img-container
-{
-    display: flex;
-    justify-content: center;
-    color: brown;
-}
-
-.img-class
-{
-    height: 320px;
-    width: 230px;
-
-}
-
-.img-header
-{
-    display: flex;
-    justify-content: center;
-}
-
